--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@ body {
   margin: 0;
   height: 100%;
   background-color: #000000;
-  font-family: Source Code Pro, sans-serif;
+  font-family: Electrolize, sans-serif;
   font-size: 1.2vw;
   background-size: 400% 400%;
   }
