--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,6 +9,24 @@ html {height: 100%;}
   src: url(https://fonts.gstatic.com/s/electrolize/v14/cIf5Ma1dtE0zSiGSiED7AXEBuI8.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
+/* latin */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 700;
+  src: url(https://fonts.gstatic.com/s/lato/v23/S6u9w4BMUTPHh6UVSwiPGQ.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/* latin */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu4mxK.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 /*Font end*/
 
 /*Body start*/
@@ -107,6 +125,7 @@ ul{
 }
 
 ul.navmain {
+  font-family: Lato, sans-serif;
   width:8%;
   font-size: 85%;
   position: fixed;
@@ -130,8 +149,9 @@ ul.navmain > li > a {
 /*navigation bar (pages) end*/
 
 
-/*navigation bar (project page) start*/
+/*navigation bar (sub) start*/
 ul.navsub {
+  font-family: Lato, sans-serif;
   width:8%;
   font-size: 75%;
   position: fixed;
@@ -152,7 +172,7 @@ ul.navsub > li > a {
   color: #ffff00;
   text-decoration: none;
 }
-/*navigation bar (project page) end*/
+/*navigation bar (sub) end*/
 
 
 /*image config start*/
@@ -180,6 +200,7 @@ th {
 
 /* FOOTER CODE ---DO NOT TOUCH--- */
 #footer {
+  font-family: Roboto, sans-serif;
   text-indent: 7.5%;
   position: fixed;
   bottom: 0;
