--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,9 @@
 html {height: 100%;}
 
+.btn-group .button:hover {
+  background-color: #3e8e41;
+}
+
 /*Font start*/
 /* latin */
 @font-face {
@@ -78,6 +82,12 @@ h5{
   color: #c8c8c8;
 }
 
+h6{
+  margin:0;
+  font-size: 100%;
+  color: #969696;
+}
+
 #header {
   background-color: #000000;
   color: #ffffff;
@@ -110,11 +120,21 @@ h5{
 p{
   color: #999999;
 }
+
+<p class="typeLato">{
+  font-family: Lato, sans-serif;
+  font-size: 1.5vw;
+}
+
 li{
   color: #999999;
 }
 /*Text colour for the site end*/
 
+<ul class="list1">{
+    list-style: none;
+    padding-left: 5%;
+}
 
 /*list format start*/
 dd{
@@ -124,6 +144,30 @@ dd{
 }
 /*list format end*/
 
+.btn-group button {
+  background-color: #04AA6D; /* Green background */
+  border: 1px solid green; /* Green border */
+  color: white; /* White text */
+  padding: 10px 24px; /* Some padding */
+  cursor: pointer; /* Pointer/hand icon */
+   /* Set a width if needed */
+  display: block; /* Make the buttons appear below each other */
+  font-family: Lato, sans-serif;
+  width:9%;
+  font-size: 80%;
+  position: fixed;
+  left: 0;
+  line-height: 50px;
+}
+
+.btn-group button:not(:last-child) {
+  border-bottom: none; /* Prevent double borders */
+}
+
+/* Add a background color on hover */
+.btn-group button:hover {
+  background-color: #3e8e41;
+}
 
 /*navigation bar (pages) start*/
 ul{
@@ -132,10 +176,9 @@ ul{
 
 ul.navmain {
   font-family: Lato, sans-serif;
-  width:8%;
-  font-size: 85%;
+  width:9%;
+  font-size: 80%;
   position: fixed;
-  middle: 0;
   right: 0;
   padding: 0px;
   background-color: clear;
@@ -159,11 +202,11 @@ ul.navmain > li > a {
 ul.navsub {
   font-family: Lato, sans-serif;
   width:8%;
-  font-size: 75%;
+  font-size: 60%;
   position: fixed;
   middle: 0;
   left: 0;
-  padding: 0px;
+  padding: 5px;
   background-color: clear;
   text-align: center;
 }
@@ -217,6 +260,6 @@ th {
   background-color:#000000;
   color: #ffffff;
   text-align: right;
-  font-size: 80%;
+  font-size: 50%;
 }
 /* FOOTER CODE ---DO NOT TOUCH--- */
