--- a/stylesheet.css
+++ b/stylesheet.css
@@ -161,13 +161,16 @@ dd{
 }
 
 .btn-group button:not(:last-child) {
-  border-bottom: none; /* Prevent double borders */
+  border-bottom: none;
+  /* Prevent double borders */
 }
 
 /* Add a background color on hover */
 .btn-group button:hover {
   background-color: #3e8e41;
 }
+
+
 
 /*navigation bar (pages) start*/
 ul{
@@ -235,7 +238,6 @@ img{
 
 
 /*Table config start*/
-
 table {
   width: 100%;
 }
